# circlecover-triangles

./: .gitignore  CMakeLists.txt  LICENSE
ivarp_ia/: CMakeLists.txt  UseIVARPIA.cmake  ivarp_ia_options.cmake  ivarp_ia_setup.cmake
ivarp_ia/cmake/: cuda_support.cmake  debug_use_asan.cmake  enable_coverage.cmake  enable_warnings.cmake  imported_target_utils.cmake  rounding_flags.cmake
ivarp_ia/include/doctest/: doctest.hpp
ivarp_ia/include/ivarp_ia/: builtin_interval.hpp  constant_cache.hpp  fpsetup.hpp  ibool.hpp  ivarp_ia.hpp  meta.hpp
ivarp_ia/include/ivarp_ia/impl/: add_interval.hpp  attributes.hpp  compare_interval.hpp  div_interval.hpp  i64_to_interval.hpp  interval_setops.hpp  mul_interval.hpp  sqrt_interval.hpp
ivarp_ia/src/: CMakeLists.txt  interval_cos.cpp  interval_div.cpp  interval_sin.cpp  interval_tan.cpp  mpfr_aux.hpp  period_reduction.hpp
ivarp_ia/test/: CMakeLists.txt  ibool.cpp  idouble.cpp  idouble_sin_cos.cpp  main.cpp
src/: CMakeLists.txt  acute_isoceles.cpp  basic_variable_set.hpp  below_45_isoceles.cpp  below_45_isoceles.hpp  below_45_isoceles_derivatives.cpp  below_45_isoceles_derivatives.hpp  constraint.hpp  equilateral.cpp  geometry.hpp  halfsquares.cpp  main.cpp  propagate_result.hpp  prover.hpp  r1_in_center.hpp  rectangle_base_cover.hpp  rectangle_cover.hpp  two_large_disks.hpp
